[package]
name = "alberto_burn_that_website_please"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
httparse = "1.8.0"
reqwest = { version = "0.11.6", features = ["json"] }